--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^1.4.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-axios": "^3.5.2"
+    "vue": "^3.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
