--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@vercel/speed-insights": "^1.0.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "4"
