--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.12.16",
 		"@babel/eslint-parser": "^7.12.16",
+		"@catppuccin/tailwindcss": "^0.1.6",
 		"@vue/cli-plugin-babel": "~5.0.0",
 		"@vue/cli-plugin-eslint": "~5.0.0",
 		"@vue/cli-service": "~5.0.0",
